fixed the filter bar on mobile

--- a/main/static/css/yourbit_core.css
+++ b/main/static/css/yourbit_core.css
@@ -1350,8 +1350,7 @@ only be used for object transforms (shaping and scaling)
     }
 
     #yb-browse-nav {
-        position: sticky; 
-        display: block;
+        position: sticky;
         top: -20px; 
         height: 40px; 
         z-index: 20; 
@@ -2680,7 +2679,8 @@ only be used for object transforms (shaping and scaling)
         grid-row: 1;
         grid-column: 3;
     }
-    .filter-option-4{
+
+    .filter-option-4 {
         display: block;
         position: relative;
         grid-row: 2;
